--- a/sdl_exp/sdl_exp.vcxproj.filters
+++ b/sdl_exp/sdl_exp.vcxproj.filters
@@ -45,6 +45,9 @@
     <Filter Include="Source Files\Visualisation\Shader\util">
       <UniqueIdentifier>{a1ff9809-bae0-47a2-b6bb-6d5b6f329b1b}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\Visualisation\Util">
+      <UniqueIdentifier>{561a15bc-295a-46ca-a632-3ba1da2d012d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="visualisation\Axis.cpp">
@@ -125,6 +128,9 @@
     <ClCompile Include="visualisation\shader\GaussianBlur.cpp">
       <Filter>Source Files\Visualisation\Shader\util</Filter>
     </ClCompile>
+    <ClCompile Include="visualisation\util\Optimus.cpp">
+      <Filter>Source Files\Visualisation\Util</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="visualisation\util\cuda.cuh">
@@ -149,9 +155,6 @@
     </ClInclude>
     <ClInclude Include="visualisation\Visualisation.h">
       <Filter>Header Files\Visualisation</Filter>
-    </ClInclude>
-    <ClInclude Include="visualisation\GLcheck.h">
-      <Filter>Header Files\Visualisation\Util</Filter>
     </ClInclude>
     <ClInclude Include="visualisation\texture\Texture2D.h">
       <Filter>Header Files\Visualisation\Texture</Filter>
@@ -227,6 +230,9 @@
     </ClInclude>
     <ClInclude Include="visualisation\shader\GaussianBlur.h">
       <Filter>Header Files\Visualisation\Shader\util</Filter>
+    </ClInclude>
+    <ClInclude Include="visualisation\util\GLcheck.h">
+      <Filter>Header Files\Visualisation\Util</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
