--- a/sdl_exp/sdl_exp.vcxproj
+++ b/sdl_exp/sdl_exp.vcxproj
@@ -165,7 +165,7 @@
     <ClCompile Include="TwoPassScene.cpp" />
     <ClCompile Include="visualisation\Axis.cpp" />
     <ClCompile Include="visualisation\BasicScene.cpp" />
-    <ClCompile Include="visualisation\Camera.cpp" />
+    <ClCompile Include="visualisation\FlyCamera.cpp" />
     <ClCompile Include="visualisation\Entity.cpp" />
     <ClCompile Include="visualisation\Entity2.cpp" />
     <ClCompile Include="visualisation\HUD.cpp" />
@@ -189,7 +189,7 @@
     <ClCompile Include="visualisation\util\Optimus.cpp" />
     <ClCompile Include="visualisation\Visualisation.cpp" />
     <ClCompile Include="visualisation\VisualisationVR.cpp" />
-    <ClCompile Include="visualisation\vr\CameraVR.cpp" />
+    <ClCompile Include="visualisation\vr\HMDCamera.cpp" />
     <ClCompile Include="visualisation\vr\CompanionVR.cpp" />
     <ClCompile Include="visualisation\vr\TrackedDevicesVR.cpp" />
   </ItemGroup>
@@ -204,10 +204,11 @@
     <ClInclude Include="TwoPassScene.h" />
     <ClInclude Include="visualisation\Axis.h" />
     <ClInclude Include="visualisation\BasicScene.h" />
-    <ClInclude Include="visualisation\Camera.h" />
+    <ClInclude Include="visualisation\FlyCamera.h" />
     <ClInclude Include="visualisation\Entity.h" />
     <ClInclude Include="visualisation\Entity2.h" />
     <ClInclude Include="visualisation\HUD.h" />
+    <ClInclude Include="visualisation\interface\Camera.h" />
     <ClInclude Include="visualisation\interface\FBuffer.h" />
     <ClInclude Include="visualisation\interface\Reloadable.h" />
     <ClInclude Include="visualisation\interface\Renderable.h" />
@@ -236,7 +237,7 @@
     <ClInclude Include="visualisation\util\GLcheck.h" />
     <ClInclude Include="visualisation\Visualisation.h" />
     <ClInclude Include="visualisation\VisualisationVR.h" />
-    <ClInclude Include="visualisation\vr\CameraVR.h" />
+    <ClInclude Include="visualisation\vr\HMDCamera.h" />
     <ClInclude Include="visualisation\vr\CompanionVR.h" />
     <ClInclude Include="visualisation\vr\TrackedDevicesVR.h" />
     <ClInclude Include="visualisation\vr\utilVR.h" />
