--- a/sdl_exp/sdl_exp.vcxproj
+++ b/sdl_exp/sdl_exp.vcxproj
@@ -176,6 +176,7 @@
     <ClCompile Include="visualisation\multipass\RenderPass.cpp" />
     <ClCompile Include="visualisation\Overlay.cpp" />
     <ClCompile Include="visualisation\primitives\Lines.cpp" />
+    <ClCompile Include="visualisation\primitives\Points.cpp" />
     <ClCompile Include="visualisation\shader\ComputeShader.cpp" />
     <ClCompile Include="visualisation\shader\GaussianBlur.cpp" />
     <ClCompile Include="visualisation\shader\ShaderCore.cpp" />
@@ -225,6 +226,7 @@
     <ClInclude Include="visualisation\multipass\RenderPass.h" />
     <ClInclude Include="visualisation\Overlay.h" />
     <ClInclude Include="visualisation\primitives\Lines.h" />
+    <ClInclude Include="visualisation\primitives\Points.h" />
     <ClInclude Include="visualisation\primitives\Primitives.h" />
     <ClInclude Include="visualisation\shader\ComputeShader.h" />
     <ClInclude Include="visualisation\shader\GaussianBlur.h" />
