Texture sub-package re-factor (#49)
This is a large breaking change.

Primary improvements:
* Textures loaded from disk are now cached for their lifetime (and immutable)
* All textures are constructed via static factory methods which return shared pointers
* Immutable textures can be made mutable via copy-construction.
* Proper constructor for raw/mutable texture handling
* Proper configuration of common texture wrapping/filtering options (these are shared across all instances of immutable textures)
* All texture classes (and the new `RenderBuffer`) now have explicit copy constructors
  * Hope to eventually do this for all classes, especially `Shaders`
* Textures now bind to shaders like everything else (but this might change in the near future when materials are added)
* `Texture2D` autogenerates mipmap when `setTexture()` and `resize()` are called with data.

Not done:
*  Not added native support for `glBindImageTexture()` or memory barriers to Compute Shaders (this is currently used by GaussBlur/Compute shaders)
* Not encapsulated copy constructors into a `copy()` or `clone()` method, trigger copy constructor currently involves dereferencing a shared pointer, this seems awkward. May add this in future, but I don't currently think copy constructors will be widely used, they were added more for safety.
* Haven't created a format factory for raw textures like we have for `FrameBufferAttachment`, desirable option but don't currently feel a need, never had much issue working these out with docs.
* Haven't tested copy constructors either (although cant see why they would fail).

--- a/sdl_exp/sdl_exp.vcxproj.filters
+++ b/sdl_exp/sdl_exp.vcxproj.filters
@@ -74,12 +74,6 @@
     <ClCompile Include="visualisation\Visualisation.cpp">
       <Filter>Source Files\Visualisation</Filter>
     </ClCompile>
-    <ClCompile Include="visualisation\texture\Texture.cpp">
-      <Filter>Source Files\Visualisation\Texture</Filter>
-    </ClCompile>
-    <ClCompile Include="visualisation\texture\Texture2D.cpp">
-      <Filter>Source Files\Visualisation\Texture</Filter>
-    </ClCompile>
     <ClCompile Include="visualisation\texture\TextureCubeMap.cpp">
       <Filter>Source Files\Visualisation\Texture</Filter>
     </ClCompile>
@@ -143,8 +137,20 @@
     <ClCompile Include="visualisation\shader\buffer\ShaderStorageBuffer.cpp">
       <Filter>Source Files\Visualisation\Shader\Buffer</Filter>
     </ClCompile>
+    <ClCompile Include="visualisation\texture\Texture.cpp">
+      <Filter>Source Files\Visualisation\Texture</Filter>
+    </ClCompile>
+    <ClCompile Include="visualisation\texture\Texture2D.cpp">
+      <Filter>Source Files\Visualisation\Texture</Filter>
+    </ClCompile>
+    <ClCompile Include="visualisation\texture\Texture2D_Multisample.cpp">
+      <Filter>Source Files\Visualisation\Texture</Filter>
+    </ClCompile>
     <ClCompile Include="visualisation\shader\buffer\UniformBuffer.cpp">
       <Filter>Source Files\Visualisation\Shader\Buffer</Filter>
+    </ClCompile>
+    <ClCompile Include="visualisation\multipass\RenderBuffer.cpp">
+      <Filter>Source Files\Visualisation\MultiPass</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -171,13 +177,7 @@
     <ClInclude Include="visualisation\Visualisation.h">
       <Filter>Header Files\Visualisation</Filter>
     </ClInclude>
-    <ClInclude Include="visualisation\texture\Texture2D.h">
-      <Filter>Header Files\Visualisation\Texture</Filter>
-    </ClInclude>
     <ClInclude Include="visualisation\texture\TextureCubeMap.h">
-      <Filter>Header Files\Visualisation\Texture</Filter>
-    </ClInclude>
-    <ClInclude Include="visualisation\texture\Texture.h">
       <Filter>Header Files\Visualisation\Texture</Filter>
     </ClInclude>
     <ClInclude Include="EntityScene.h">
@@ -257,6 +257,21 @@
     </ClInclude>
     <ClInclude Include="visualisation\shader\buffer\BufferCore.h">
       <Filter>Header Files\Visualisation\Shader\Buffer</Filter>
+    </ClInclude>
+    <ClInclude Include="visualisation\texture\Texture.h">
+      <Filter>Header Files\Visualisation\Texture</Filter>
+    </ClInclude>
+    <ClInclude Include="visualisation\texture\Texture2D.h">
+      <Filter>Header Files\Visualisation\Texture</Filter>
+    </ClInclude>
+    <ClInclude Include="visualisation\texture\Texture2D_Multisample.h">
+      <Filter>Header Files\Visualisation\Texture</Filter>
+    </ClInclude>
+    <ClInclude Include="visualisation\multipass\RenderBuffer.h">
+      <Filter>Header Files\Visualisation\MultiPass</Filter>
+    </ClInclude>
+    <ClInclude Include="visualisation\interface\RenderTarget.h">
+      <Filter>Header Files\Visualisation\Interface</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
