--- a/sdl_exp/sdl_exp.vcxproj.filters
+++ b/sdl_exp/sdl_exp.vcxproj.filters
@@ -158,7 +158,10 @@
     <ClCompile Include="visualisation\multipass\RenderBuffer.cpp">
       <Filter>Source Files\Visualisation\MultiPass</Filter>
     </ClCompile>
-    <ClCompile Include="visualisation\model\SceneGraph.cpp">
+    <ClCompile Include="visualisation\model\SceneGraphEdge.cpp">
+      <Filter>Source Files\Visualisation\Model</Filter>
+    </ClCompile>
+    <ClCompile Include="visualisation\model\SceneGraphVertex.cpp">
       <Filter>Source Files\Visualisation\Model</Filter>
     </ClCompile>
   </ItemGroup>
@@ -282,7 +285,10 @@
     <ClInclude Include="visualisation\interface\RenderTarget.h">
       <Filter>Header Files\Visualisation\Interface</Filter>
     </ClInclude>
-    <ClInclude Include="visualisation\model\SceneGraph.h">
+    <ClInclude Include="visualisation\model\SceneGraphVertex.h">
+      <Filter>Header Files\Visualisation\Model</Filter>
+    </ClInclude>
+    <ClInclude Include="visualisation\model\SceneGraphEdge.h">
       <Filter>Header Files\Visualisation\Model</Filter>
     </ClInclude>
   </ItemGroup>
