Basic Scene graph animation.
Still alot to do.

--- a/sdl_exp/sdl_exp.vcxproj
+++ b/sdl_exp/sdl_exp.vcxproj
@@ -170,7 +170,7 @@
     <ClCompile Include="visualisation\HUD.cpp" />
     <ClCompile Include="visualisation\Material.cpp" />
     <ClCompile Include="visualisation\model\SceneGraphJoint.cpp" />
-    <ClCompile Include="visualisation\model\SceneGraphVertex.cpp" />
+    <ClCompile Include="visualisation\model\SceneGraphItem.cpp" />
     <ClCompile Include="visualisation\multipass\BackBuffer.cpp" />
     <ClCompile Include="visualisation\multipass\FrameBuffer.cpp" />
     <ClCompile Include="visualisation\multipass\MultiPassScene.cpp" />
@@ -217,7 +217,7 @@
     <ClInclude Include="visualisation\interface\Viewport.h" />
     <ClInclude Include="visualisation\Material.h" />
     <ClInclude Include="visualisation\model\SceneGraphJoint.h" />
-    <ClInclude Include="visualisation\model\SceneGraphVertex.h" />
+    <ClInclude Include="visualisation\model\SceneGraphItem.h" />
     <ClInclude Include="visualisation\multipass\BackBuffer.h" />
     <ClInclude Include="visualisation\multipass\FrameBuffer.h" />
     <ClInclude Include="visualisation\multipass\FrameBufferAttachment.h" />
