--- a/sdl_exp/sdl_exp.vcxproj.filters
+++ b/sdl_exp/sdl_exp.vcxproj.filters
@@ -158,10 +158,10 @@
     <ClCompile Include="visualisation\multipass\RenderBuffer.cpp">
       <Filter>Source Files\Visualisation\MultiPass</Filter>
     </ClCompile>
-    <ClCompile Include="visualisation\model\SceneGraphVertex.cpp">
+    <ClCompile Include="visualisation\model\SceneGraphJoint.cpp">
       <Filter>Source Files\Visualisation\Model</Filter>
     </ClCompile>
-    <ClCompile Include="visualisation\model\SceneGraphJoint.cpp">
+    <ClCompile Include="visualisation\model\SceneGraphItem.cpp">
       <Filter>Source Files\Visualisation\Model</Filter>
     </ClCompile>
   </ItemGroup>
@@ -285,10 +285,10 @@
     <ClInclude Include="visualisation\interface\RenderTarget.h">
       <Filter>Header Files\Visualisation\Interface</Filter>
     </ClInclude>
-    <ClInclude Include="visualisation\model\SceneGraphVertex.h">
+    <ClInclude Include="visualisation\model\SceneGraphJoint.h">
       <Filter>Header Files\Visualisation\Model</Filter>
     </ClInclude>
-    <ClInclude Include="visualisation\model\SceneGraphJoint.h">
+    <ClInclude Include="visualisation\model\SceneGraphItem.h">
       <Filter>Header Files\Visualisation\Model</Filter>
     </ClInclude>
   </ItemGroup>
